fix: Align borders properly for fixed columns (#2275)
* fix: change border width, shift fixed columns down [ci visual]

* fix: increase margin [ci visual]

* fix: Table - add border for fixed columns, fix overlay for heading fixed cell [ci visual]

--- a/src/table.scss
+++ b/src/table.scss
@@ -65,13 +65,14 @@ $block: #{$fd-namespace}-table;
   $fd-table-compact-cell-height: 2rem;
   $fd-table-navigation-icon-width: 2rem;
   $fd-table-condensed-cell-height: 1.5rem;
+  $fd-table-fixed-cell-shift: 0.05rem;
 
   // Thanks to table-cell specification, if the width is set to small value, the cell will have content width
   $fd-table-cell-fit-content-width: 0.5rem;
 
   $fd-table-basic-background: var(--sapList_Background);
   $fd-table-border: var(--sapList_BorderWidth) solid var(--sapList_BorderColor);
-  $fd-table-fixed-cell-border: 0.125rem var(--sapList_TableFixedBorderColor) solid;
+  $fd-table-fixed-cell-border: var(--sapList_BorderWidth) solid var(--sapList_TableFixedBorderColor);
 
   // BLOCK BASE *******************************************
   // set all BLOCK reset and baseline styles
@@ -121,6 +122,19 @@ $block: #{$fd-namespace}-table;
       height: $fd-table-cozy-cell-height;
       background-color: var(--sapList_HeaderBackground);
       color: var(--sapList_HeaderTextColor);
+
+      &--fixed {
+        margin-top: -$fd-table-fixed-cell-shift;
+        border-top: $fd-table-border;
+        border-right: $fd-table-fixed-cell-border;
+        border-left: $fd-table-border;
+        height: $fd-table-cozy-cell-height + $fd-table-fixed-cell-shift;
+
+        @include fd-rtl() {
+          border-left: $fd-table-fixed-cell-border;
+          border-right: $fd-table-border;
+        }
+      }
     }
   }
 
@@ -206,6 +220,8 @@ $block: #{$fd-namespace}-table;
       position: absolute;
       background-color: inherit;
       border-bottom: $fd-table-border;
+      border-left: $fd-table-border;
+      margin-top: $fd-table-fixed-cell-shift;
 
       @include fd-flex-vertical-center();
 
@@ -222,7 +238,7 @@ $block: #{$fd-namespace}-table;
         right: 0;
 
         &:last-of-type {
-          border-right: none;
+          border-right: $fd-table-border;
           border-left: $fd-table-fixed-cell-border;
         }
       }
@@ -294,6 +310,14 @@ $block: #{$fd-namespace}-table;
         @include fd-selected() {
           @include fd-active() {
             background-color: var(--sapList_Active_Background);
+          }
+        }
+      }
+
+      @include fd-first-child() {
+        .#{$block}__cell {
+          &--fixed {
+            margin-top: 0;
           }
         }
       }
@@ -561,6 +585,10 @@ $block: #{$fd-namespace}-table;
     .#{$block}__header {
       .#{$block}__cell {
         height: $fd-table-compact-cell-height;
+
+        &--fixed {
+          height: $fd-table-compact-cell-height + $fd-table-fixed-cell-shift;
+        }
       }
     }
   }
